--- a/01/index.html
+++ b/01/index.html
@@ -16,6 +16,24 @@
   </head>
 
   <body>
+    <header class="main-header">
+      <div>
+        <a href="index.html" class="main-header_brand"> uHost </a>
+      </div>
+      <nav class="main-nav">
+        <ul class="main-nav_items">
+          <li class="main-nav_item">
+            <a href="packages/index.html">Packages</a>
+          </li>
+          <li class="main-nav_item">
+            <a href="customers/index.html">Customers</a>
+          </li>
+          <li class="main-nav_item">
+            <a href="start-hosting/index.html">Start Hosting</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <section id="product-overview">
         <h1>무엇을 하든 당신의 자유입니다.</h1>
