feat: 요금제 섹션

--- a/01/index.html
+++ b/01/index.html
@@ -39,7 +39,52 @@
         <h1>무엇을 하든 당신의 자유입니다.</h1>
       </section>
       <section id="plans">
-        <h1 class="section-title">당신의 계획을 선택해 주세요.</h1>
+        <h1 class="section-title">요금제를 선택해 주세요</h1>
+        <div>
+          <article class="plan">
+            <h1 class="plan_title">FREE</h1>
+            <h2 class="plan_price">$0/month</h2>
+            <h3>For hobby projects or small teams.</h3>
+            <ul class="plan_featrues">
+              <li>1 Workspace</li>
+              <li>Unlimited Traffic</li>
+              <li>10GB Storage</li>
+              <li>Basic Support</li>
+            </ul>
+            <div>
+              <button class="button">CHOOSE PLAN</button>
+            </div>
+          </article>
+          <article class="plan plan--highlighted">
+            <h1 class="plan_annotation">RECOMMENDED</h1>
+            <h1 class="plan_title">PLUS</h1>
+            <h2 class="plan_price">$29/month</h2>
+            <h3>For ambitious projects.</h3>
+            <ul class="plan_featrues">
+              <li>5 Workspaces</li>
+              <li>Unlimited Traffic</li>
+              <li>100GB Storage</li>
+              <li>Plus Support</li>
+            </ul>
+            <div>
+              <button class="button">CHOOSE PLAN</button>
+            </div>
+          </article>
+          <article class="plan">
+            <h1 class="plan_title">PREMIUM</h1>
+            <h2 class="plan_price">$99/month</h2>
+            <h3>Your enterprise solution.</h3>
+            <ul class="plan_featrues">
+              <li>10 Workspaces</li>
+              <li>Unlimited Traffic</li>
+              <li>Unlimited Storage</li>
+              <li>Priority Support</li>
+            </ul>
+            <div>
+              <button class="button">CHOOSE PLAN</button>
+            </div>
+          </article>
+        </div>
         <p>Make sure you get the most for your money!</p>
       </section>
     </main>
