feat: key-features 만들기 - 원 모양 어떻게 만드는지 등

--- a/01/index.html
+++ b/01/index.html
@@ -45,7 +45,7 @@
             <h1 class="plan_title">FREE</h1>
             <h2 class="plan_price">$0/month</h2>
             <h3>For hobby projects or small teams.</h3>
-            <ul class="plan_featrues">
+            <ul class="plan_features">
               <li>1 Workspace</li>
               <li>Unlimited Traffic</li>
               <li>10GB Storage</li>
@@ -60,7 +60,7 @@
             <h1 class="plan_title">PLUS</h1>
             <h2 class="plan_price">$29/month</h2>
             <h3>For ambitious projects.</h3>
-            <ul class="plan_featrues">
+            <ul class="plan_features">
               <li>5 Workspaces</li>
               <li>Unlimited Traffic</li>
               <li>100GB Storage</li>
@@ -74,7 +74,7 @@
             <h1 class="plan_title">PREMIUM</h1>
             <h2 class="plan_price">$99/month</h2>
             <h3>Your enterprise solution.</h3>
-            <ul class="plan_featrues">
+            <ul class="plan_features">
               <li>10 Workspaces</li>
               <li>Unlimited Traffic</li>
               <li>Unlimited Storage</li>
@@ -85,7 +85,23 @@
             </div>
           </article>
         </div>
-        <p>Make sure you get the most for your money!</p>
+      </section>
+      <section id="key-features">
+        <h1 class="section-title">Many Good Reasons to Stick Around</h1>
+        <ul class="key-features_list">
+          <li class="key-feature">
+            <div class="key-feature_image"></div>
+            <p class="key-feature_description">3,857,000 Trusting Customers</p>
+          </li>
+          <li class="key-feature">
+            <div class="key-feature_image"></div>
+            <p class="key-feature_description">99.999% Uptime Guarantee</p>
+          </li>
+          <li class="key-feature">
+            <div class="key-feature_image"></div>
+            <p class="key-feature_description">Lightning Fast CDN</p>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
