--- a/01/index.html
+++ b/01/index.html
@@ -104,5 +104,17 @@
         </ul>
       </section>
     </main>
+    <footer class="main-footer">
+      <nav>
+        <ul class="main-footer_links">
+          <li class="main-footer_link">
+            <a href="#">Support</a>
+          </li>
+          <li class="main-footer_link">
+            <a href="#">Terms of Use</a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
