--- a/01/resource/index.html
+++ b/01/resource/index.html
@@ -1,23 +1,12 @@
-        <section>
-            <h1>Many Good Reasons to Stick Around</h1>
+    <footer>
+        <nav>
             <ul>
                 <li>
-                    <div>
-
-                    </div>
-                    <p>3,857,000 Trusting Customers</p>
+                    <a href="#">Support</a>
                 </li>
                 <li>
-                    <div>
-
-                    </div>
-                    <p>99.999% Uptime Guarantee</p>
-                </li>
-                <li>
-                    <div>
-
-                    </div>
-                    <p>Lightning Fast CDN</p>
+                    <a href="#">Terms of Use</a>
                 </li>
             </ul>
-        </section>
+        </nav>
+    </footer>
