--- a/01/index.html
+++ b/01/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbit&family=Roboto:ital,wght@0,800;1,800&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="shared.css" />
     <link rel="stylesheet" href="main.css" />
   </head>
 
