feat: packages float 설명 div 만들어 주고, clear:both를 사용해서 위 아래에 있는 것들을 float 속성을 없애줘야 한다.

--- a/01/packages/index.html
+++ b/01/packages/index.html
@@ -58,6 +58,7 @@
           </p>
         </a>
       </section>
+      <div class="clearfix"></div>
       <section class="plan-contents contents_bot">
         <a href="#">
           <h1 class="plan-contents_title">Our PREMIUM Plan</h1>
