feat: 요금제 중앙 정렬 배치

--- a/01/index.html
+++ b/01/index.html
@@ -40,7 +40,7 @@
       </section>
       <section id="plans">
         <h1 class="section-title">요금제를 선택해 주세요</h1>
-        <div>
+        <div class="plan_list">
           <article class="plan">
             <h1 class="plan_title">FREE</h1>
             <h2 class="plan_price">$0/month</h2>
