feat: poistion 개념 배우기 - fixed - absolute - relative - overflow (body가 부모 요소일 때 해결법)

--- a/01/packages/index.html
+++ b/01/packages/index.html
@@ -39,6 +39,7 @@
       <section class="plan-contents contents_top">
         <a href="#">
           <h1 class="plan-contents_title">Our PLUS Plan</h1>
+          <h2 class="package_badge">RECOMMENDED</h2>
           <h2 class="plan-contents_subtitle">
             The most popular choice of our customers.
           </h2>
