--- a/01/index.html
+++ b/01/index.html
@@ -18,7 +18,12 @@
   <body>
     <header class="main-header">
       <div>
-        <a href="index.html" class="main-header_brand"> uHost </a>
+        <a href="index.html" class="main-header_brand">
+          <img
+            src="images/uhost-icon.png"
+            alt="uHost - Your favorite hosting company"
+          />
+        </a>
       </div>
       <nav class="main-nav">
         <ul class="main-nav_items">
