feat: 이미지 배치 레이아웃

--- a/01/resource/index.html
+++ b/01/resource/index.html
@@ -1,22 +1,61 @@
-        <section>
-            <a href="#">
-                <h1>Our PLUS Plan</h1>
-                <h2>The most popular choice of our customers.</h2>
-                <p>Benefit from increased storage and faster support to ensure that your mission-critical data and applications
-                    are always available!</p>
-            </a>
-        </section>
-        <section>
-            <a href="#">
-                <h1>Our FREE Plan</h1>
-                <h2>An extremely solid start into our hosting world.</h2>
-                <p>Get started immediately at zero cost!</p>
-            </a>
-        </section>
-        <section>
-            <a href="#">
-                <h1>Our PREMIUM Plan</h1>
-                <h2>All your enterprise needs. Instant support, guaranteed uptime. </h2>
-                <p>The best solution for small to large enterprises. Because hosting shouldn't be in the way!</p>
-            </a>
-        </section>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>uHost Customers</title>
+    <link rel="shortcut icon" href="../favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Montserrat:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="../shared.css">
+    <link rel="stylesheet" href="customers.css">
+</head>
+
+<body>
+
+    <main>
+        <div>
+            <div class="testimonial" id="customer-1">
+                <div class="testimonial__image-container">
+                    <img src="../images/customer-1.jpg" alt="Mike Statham - Customer" class="testimonial__image">
+                </div>
+                <div class="testimonial__info">
+                    <h1 class="testimonial__name">Mike Statham</h1>
+                    <h2 class="testimonial__subtitle">Founder of
+                        <a href="tech-analysis.com">tech-analysis.com</a>
+                    </h2>
+                    <p class="testimonial__text">uHost helped me realize my project with a highly constrained budget in like no time.</p>
+                </div>
+            </div>
+            <div class="testimonial" id="customer-2">
+
+                <div class="testimonial__info">
+                    <h1 class="testimonial__name">John Mellow</h1>
+                    <h2 class="testimonial__subtitle">Hosts his private videos on uHost.
+                    </h2>
+                    <p class="testimonial__text">I worked as a blogger and always looked for an integrated hosting and file storage solution. I found
+                        it in uHost!
+                    </p>
+                </div>
+                <div class="testimonial__image-container">
+                    <img src="../images/customer-2.jpg" alt="John Mellow - Customer" class="testimonial__image">
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="main-footer">
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Support</a>
+                </li>
+                <li>
+                    <a href="#">Terms of Use</a>
+                </li>
+            </ul>
+        </nav>
+    </footer>
+</body>
+
+</html>
