feat: rem, em, vh, vm 단위 배우기

--- a/01/index.html
+++ b/01/index.html
@@ -94,7 +94,7 @@
       </section>
       <section id="key-features">
         <h1 class="section-title">Many Good Reasons to Stick Around</h1>
-        <ul class="key-features_list">
+        <ul class="key-feature_list">
           <li class="key-feature">
             <div class="key-feature_image">
               <svg viewBox="0 0 512 512">
