--- a/01/index.html
+++ b/01/index.html
@@ -17,8 +17,22 @@
 
   <body>
     <div class="backdrop"></div>
+    <div class="modal">
+      <h1 class="modal__title">Do you want to continue?</h1>
+      <div class="modal__actions">
+        <a href="start-hosting/index.html" class="modal__action">Yes!</a>
+        <button class="modal__action modal__action--negative" type="button">
+          No!
+        </button>
+      </div>
+    </div>
     <header class="main-header">
       <div>
+        <button class="toggle-button">
+          <span class="toggle-button__bar"></span>
+          <span class="toggle-button__bar"></span>
+          <span class="toggle-button__bar"></span>
+        </button>
         <a href="index.html" class="main-header_brand">
           <img
             src="images/uhost-icon.png"
@@ -40,6 +54,19 @@
         </ul>
       </nav>
     </header>
+    <nav class="mobile-nav">
+      <ul class="mobile-nav__items">
+        <li class="mobile-nav__item">
+          <a href="packages/index.html">Packages</a>
+        </li>
+        <li class="mobile-nav__item">
+          <a href="customers/index.html">Customers</a>
+        </li>
+        <li class="mobile-nav__item mobile-nav__item--cta">
+          <a href="start-hosting/index.html">Start Hosting</a>
+        </li>
+      </ul>
+    </nav>
     <main>
       <section id="product-overview">
         <h1>무엇을 하든 당신의 자유입니다.</h1>
@@ -502,5 +529,6 @@
         </ul>
       </nav>
     </footer>
+    <script src="shared.js"></script>
   </body>
 </html>
