--- a/01/packages/index.html
+++ b/01/packages/index.html
@@ -20,6 +20,11 @@
     <div class="background"></div>
     <header class="main-header">
       <div>
+        <button class="toggle-button">
+          <span class="toggle-button__bar"></span>
+          <span class="toggle-button__bar"></span>
+          <span class="toggle-button__bar"></span>
+        </button>
         <a href="../index.html" class="main-header_brand">
           <img
             src="../images/uhost-icon.png"
@@ -41,6 +46,19 @@
         </ul>
       </nav>
     </header>
+    <nav class="mobile-nav">
+      <ul class="mobile-nav__items">
+        <li class="mobile-nav__item">
+          <a href="index.html">Packages</a>
+        </li>
+        <li class="mobile-nav__item">
+          <a href="../customers/index.html">Customers</a>
+        </li>
+        <li class="mobile-nav__item mobile-nav__item--cta">
+          <a href="../start-hosting/index.html">Start Hosting</a>
+        </li>
+      </ul>
+    </nav>
     <main>
       <section class="plan-contents contents_top">
         <a href="#">
@@ -92,5 +110,6 @@
         </ul>
       </nav>
     </footer>
+    <script src="../shared.js"></script>
   </body>
 </html>
